<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81C784"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/account_login"
        android:textSize="22sp"
        android:textColor="#fff"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <EditText
                android:id="@+id/editTextId"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/lock"
                android:drawableTint="#FF4081"
                android:singleLine="true"
                android:hint="@string/id"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/key"
                android:drawableTint="#FF4081"
                android:hint="@string/password"
                android:inputType="text" />


            <TextView
                android:id="@+id/text_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="mi"
                android:layout_gravity="right"
                android:paddingTop="5dp"
                android:text="@string/forgot" />


            <Button
                android:id="@+id/btn_signin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="27dp"
                android:background="#d67601"
                android:text="@string/signin"
                android:onClick="insert"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="2dp"
                android:onClick="mi"
                android:text="@string/registration" />
        </LinearLayout>
    </RelativeLayout>


    <ImageButton
        android:id="@+id/shape"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/shape"
        android:elevation="4dp"
        android:src="@drawable/user"
        android:layout_alignTop="@+id/login_title"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
