<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81C784"
    android:orientation="vertical"
    tools:context="cz.martykan.forecastie.Instrument"
    android:weightSum="1">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="#fff"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_weight="0.19" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:background="#fff"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/editTextId"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/id"
            android:background="@drawable/rounded_border_edittext"
            android:drawableTint="#FF4081"
            android:inputType="text"
            android:textColorHint="#9E9E9E"
            android:textSize="25dp"
            android:hint="@string/id"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/key"
            android:drawableTint="#FF4081"
            android:hint="@string/password"
            android:background="@drawable/rounded_border_edittext"
            android:inputType="numberPassword"
            android:layout_height="50dp"
            android:textColorHint="#9E9E9E"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/key"
            android:drawableTint="#FF4081"
            android:background="@drawable/rounded_border_edittext"
            android:hint="Conform Password"
            android:textColorHint="#9E9E9E"
            android:inputType="numberPassword"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/editTextCellno"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:hint="@string/cell_no"
            android:background="@drawable/rounded_border_edittext"
            android:textColorHint="#9E9E9E"
            android:textSize="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:padding="5dp"
            android:background="#d67601"
            android:gravity="center"
            android:onClick="insert"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_weight="0.07" />

    </LinearLayout>




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>





